# portfolio_v2

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN_GUIDELINES.md  PLAN-hero-counters.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.claude/commands/: write-tests.md
.cursor/rules/: playwright-e2e.md
api/: pyproject.toml
api/app/: main.py  models.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx
app/admin/login/: page.tsx
app/design-system/: page.tsx
app/projects/: page.tsx
app/resources/: page.tsx
app/resume/: route.ts
app/timeline/: page.tsx
chatbot/: .gitignore  README.md  package-lock.json  package.json
chatbot/app/: layout.tsx  page.tsx
chatbot/components/: ChatInterface.tsx  DocumentList.tsx  DocumentUpload.tsx  DocumentsView.tsx  MessageBubble.tsx  NavigationDrawer.tsx  SessionSidebar.tsx  SourceCitation.tsx  StatsPanel.tsx  SystemView.tsx
chatbot/lib/: api.ts  types.ts
components/chatbot/: ChatWidget.tsx
components/design-system/: ButtonSection.tsx  ColorSection.tsx  DesignSystemShowcase.tsx  FormSection.tsx  SignUpFormExample.tsx  SpacingSection.tsx  TabSection.tsx  TypographySection.tsx
components/home/: Approach.tsx  Counters.tsx  FeaturedWork.tsx  Hero.tsx  PrimaryAttributes.tsx  Strengths.tsx  Testimonials.tsx
components/layout/: Footer.tsx  GetInTouch.tsx  Header.tsx  PageLayout.tsx  UnderConstructionBanner.tsx
components/projects/: MetricsRow.tsx  ProjectCard.tsx  ProjectHero.tsx  ProjectMeta.tsx  ProjectSection.tsx  ProjectsPageClient.tsx
components/resources/: ResourceRow.tsx  ResourcesPageClient.tsx  ResourcesTable.tsx
components/timeline/: TimelineHeader.tsx  TimelinePageClient.tsx  TimelineProgressLine.tsx  TimelineSection.tsx  TimelineSticky.tsx
components/ui/: BulletList.tsx  Button.tsx  Checkbox.tsx  ChecklistItem.tsx  ContentCardSection.tsx  CounterCard.tsx  EndorsementCard.tsx  FeaturedWorkCard.tsx  FullWidthSection.tsx  HighlightSection.tsx  Input.tsx  MagnetLines.css  MagnetLines.tsx  Radio.tsx  SectionHeader.tsx  SuperpowersOrbit.tsx  Tabs.tsx  TextType.css  TextType.tsx  TwoColumnSection.tsx
content/: endorsements.json  profile.json
content/knowledge/: knowledge-base.md  knowledge-base.template.md
content/projects/: chatbot.json  ecommerce-platform.md  entitlements-management.json  self-serve-trial.json  sts-launch.json
content/timeline/: events.json
e2e/: chatbot-eval.spec.ts  chatbot-project.spec.ts
lib/admin/: session.ts
lib/content/: loader.server.ts  types.ts  validate.ts
public/assets/: circle
services/rag-api/: .ingest_lennys_checkpoint.json  README.md  env.example  pyproject.toml
services/rag-api/app/: __init__.py  config.py  main.py  models.py  pipeline.py  settings_store.py
services/rag-api/examples/: client.py  stats_probe.py
services/rag-api/scripts/: ingest_knowledge_base.py  ingest_lennys_transcripts.py
services/rag-api/tests/: __init__.py  conftest.py  test_api.py  test_streaming.py
(+9 files in other folders)
